--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -4,7 +4,13 @@
   <meta charset="UTF-8">
   <title>Login</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/toastr.min.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <script src="/js/toastr.min.js"></script>
+  <script src="/js/sweetAlert.js"></script>
 </head>
 <body>
   <%- include('../partials/header') %>
@@ -22,10 +28,8 @@
       <button type="submit" class="btn btn-primary">Login</button>
     </form>
   </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
   <%- include('../partials/flashMessages') %>
+  <%- include('../partials/footer') %>
 </body>
-<%- include('../partials/footer') %>
 </html>
