--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Registro</title>
   <link href="https://stackpath.bootstrap.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 </head>
 <body>
   <%- include('../partials/header') %>
@@ -25,6 +26,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrap.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="js/sweetAlert.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   <%- include('../partials/flashMessages') %>
 </body>
 <%- include('../partials/footer') %>
