--- a/src/views/empleado/listarEmpleados.ejs
+++ b/src/views/empleado/listarEmpleados.ejs
@@ -1,6 +1,6 @@
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Lista Empleados</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/toastr.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
