--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -1,35 +1,104 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/toastr.min.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-  <script src="/js/toastr.min.js"></script>
-  <script src="/js/sweetAlert.js"></script>
-</head>
-<body>
-  <%- include('../partials/header') %>
-  <div class="container mt-5">
-    <h1 class="mb-4">Login</h1>
-    <form action="/auth/login" method="POST">
-      <div class="form-group">
-        <label for="username">Nombre de Usuario:</label>
-        <input type="text" id="username" name="username" class="form-control" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" class="form-control" required>
-      </div>
-      <button type="submit" class="btn btn-primary">Login</button>
-    </form>
-  </div>
 
-  <%- include('../partials/flashMessages') %>
-  <%- include('../partials/footer') %>
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/toastr.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-notify@latest/dist/simple-notify.min.css">
+    <script src="/js/toastr.min.js"></script>
+    <script src="/js/sweetAlert.js"></script>
+</head>
+
+<body>
+    <%- include('../partials/header') %>
+        <div class="container mt-5">
+            <h1 class="mb-4">Login</h1>
+            <form action="/auth/login" method="POST">
+                <div class="form-group">
+                    <label for="username">Nombre de Usuario:</label>
+                    <input type="text" id="username" name="username" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Contraseña:</label>
+                    <input type="password" id="password" name="password" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
+            </form>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/simple-notify@latest/dist/simple-notify.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                const urlParams = new URLSearchParams(window.location.search);
+                const message = urlParams.get('message');
+                switch (message) {
+                    case "registro":
+                        Swal.fire({
+                            icon: 'success',
+                            title: 'EXCELENTE!',
+                            text: "Se registró exitosamente",
+                            confirmButtonText: 'OK'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                window.location.href = "/auth/login";
+                            }
+                        });
+                        break;
+
+                    case "cierra":
+                        Swal.fire({
+                            icon: 'success',
+                            title: 'HASTA PRONTO!',
+                            text: "Se ha cerrado sesión correctamente",
+                            confirmButtonText: 'OK'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                window.location.href = "/auth/login";
+                            }
+                        });
+                        break;
+
+                    case "passmal":
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'ERROR!',
+                            text: "Contraseña incorrecta",
+                            confirmButtonText: 'OK'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                window.location.href = "/auth/login";
+                            }
+                        });
+                        break;
+
+                    case "noexiste":
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'ERROR!',
+                            text: "Usuario no encontrado",
+                            confirmButtonText: 'OK'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                window.location.href = "/auth/login";
+                            }
+                        });
+                        break;
+
+                    default:
+                        console.log("Mensaje no reconocido:", message);
+                        break;
+                }
+            })
+        </script>
+        <%- include('../partials/footer') %>
 </body>
+
 </html>
